RESOLVED FIXED69400
REGRESSION(r53878): Input elements don't share their styles if the document contains no validity style rules.
https://bugs.webkit.org/show_bug.cgi?id=69400
Summary REGRESSION(r53878): Input elements don't share their styles if the document c...
Kent Tamura
Reported 2011-10-04 23:27:17 PDT
http://trac.webkit.org/changeset/53878 introduced an optimization to avoid form control validation. if (!m_element->document()->containsValidityStyleRules()) return false; However, this code means that we don't share input element styles if the document contains no validity style rules.
Attachments
Patch (2.00 KB, patch)
2012-02-08 23:57 PST, Andreas Kling
tkent: review-
Patch v2 (2.28 KB, patch)
2012-02-09 00:51 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2012-02-08 23:57:09 PST
Kent Tamura
Comment 2 2012-02-09 00:03:42 PST
Comment on attachment 126246 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=126246&action=review > Source/WebCore/css/CSSStyleSelector.cpp:1188 > if (element->isInRange() != m_element->isInRange()) > return false; isInRange and isOutOfRange also belong to validity style rules. See SelectorChecker.cpp.
Andreas Kling
Comment 3 2012-02-09 00:51:29 PST
Created attachment 126254 [details] Patch v2 Even less work in the common case, then :)
Andreas Kling
Comment 4 2012-02-09 01:03:44 PST
Comment on attachment 126254 [details] Patch v2 Clearing flags on attachment: 126254 Committed r107193: <http://trac.webkit.org/changeset/107193>
Andreas Kling
Comment 5 2012-02-09 01:03:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.