REGRESSION(r53878): Input elements don't share their styles if the document contains no validity style rules. <http://webkit.org/b/69400>

Reviewed by Kent Tamura.

Don't reject style sharing candidates prematurely just because the document doesn't
have any :valid or :invalid selectors.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::canShareStyleWithControl):


Canonical link: https://commits.webkit.org/95100@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107193 268f45cc-cd09-0410-ab3c-d52691b4dbfc